# AdvProgProj

./: .cspell.json  .gitignore  README.md
src/: .cspell.json  CMakeLists.txt  Dockerfile  docker-compose.yml  main.cpp  test.Dockerfile
src/android-client/app/: build.gradle.kts
src/android-client/gradle/: libs.versions.toml
src/client/: Dockerfile  client.py
src/main/: CMakeLists.txt
src/main/App/: App.cpp  App.h
src/main/Commands/: HelpCommand.cpp  HelpCommand.h  ICommand.cpp  IMenu.cpp  RecommendCommand.cpp  RecommendCommand.h  RecommendEngine.cpp  RecommendEngine.h
src/main/Recommand-Engine/: RecommendEngine.cpp  RecommendEngine.h
src/main/Users/: IUserService.h  PersistentUserService.cpp  User.cpp
src/main/flow/: App.h
src/main/models/: AddCommand.cpp  AddCommand.h  App.cpp  App.h  CommandParser.cpp  CommandParser.h  ConsoleMenu.cpp  ConsoleMenu.h  Help.cpp  Help.h  ICommand.cpp  ICommand.h  IMenu.cpp  IMenu.h  RecommendCommand.cpp  RecommendCommand.h  RecommendEngine.cpp  RecommendEngine.h  User.h  main.cpp  user.cpp  user.h
src/main/services/: ConsoleMenu.cpp  IUserService.h  PersistentUserService.cpp  PersistentUserService.h
src/main/utilities/: CommandParser.h
src/models/: test_user.cpp
src/react-client/: README.md  package-lock.json  package.json
src/react-client/public/: index.html  manifest.json
src/react-client/src/: App.js  index.js
src/scripts/: clean.sh  run.sh  test.sh
src/server/: Dockerfile  main.cpp
src/test/: CMakeLists.txt
src/web-server/: .gitignore  Dockerfile  package-lock.json  package.json  server.js
(+263 files in other folders)
